Thu Oct 22 06:20:48 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (Init_RandomSeed): move all Random::DEFAULT
	  construction bits to Init_RandomSeed2. Random::DEFAULT
	  and Ruby internal hashes are no longer shared their seed.
	* random.c (Init_RandomSeed2): ditto. And, kill evil
	  rb_obj_reveal() stuff.

	* random.c (init_hashseed): add MT argument.
	* random.c: (init_siphash): ditto.

	* test/ruby/test_rand.rb (TestRand#test_default_seed): new
	  test for Random::DEFAULT::seed.

Thu Oct 22 05:23:48 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (init_hashseed, init_siphash): extract initialize
	  functions.

Thu Oct 22 01:01:34 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: sort AC_CHECK_HEADERS() by alphabetical order.

Thu Oct 22 00:19:07 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (init_randomseed): remove "initial" argument. It never
	  be used from outside of this function.

Thu Oct 22 00:12:33 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/securerandom.rb (SecureRandom::gen_random): use /dev/urandom
	  for initialize OpenSSL's rand.

Wed Oct 21 12:10:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_rand.c (ossl_rand_bytes): RAND_bytes could
	  be return -1 as an error. Therefore, added error handling.
	* ext/openssl/ossl_pkey_dsa.c (dsa_generate): ditto.

Wed Oct 21 09:04:09 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/util.h: remove a warning suppression C4723
	  (potential divide by zero) for VisualC++. It's meaningless.
	  Before r26197, there is ruby_div0() in this place and it
	  actually made divide by zero. But now it's just garbage.

Wed Oct 21 08:23:36 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c: random_raw_seed don't use GRND_NONBLOCK. GRND_NONBLOCK
	  mean the result might not have an enough cryptic strength and
	  easy predictable. That's no good for SecureRandom.
